k8s/minikube/otel-collectors.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-node-collector
  namespace: newsletter
spec:
  selector:
    matchLabels:
      app: otel-node-collector
  template:
    metadata:
      labels:
        app: otel-node-collector
    spec:
      serviceAccountName: otel-node-collector
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.119.0
          imagePullPolicy: IfNotPresent
          args:
            - --feature-gates=receiver.kubeletstats.enableCPUUsageMetrics
            - --config=/conf/otel-collector-config.yaml
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /conf
            - name: varlogcontainers
              mountPath: /var/log/containers
              readOnly: true
            - name: varlogpods
              mountPath: /var/log/pods
              readOnly: true
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: otel-node-collector-config
        - name: varlogcontainers
          hostPath:
            path: /var/log/containers
        - name: varlogpods
          hostPath:
            path: /var/log/pods
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
            type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-cluster-collector
  namespace: newsletter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-cluster-collector
  template:
    metadata:
      labels:
        app: otel-cluster-collector
    spec:
      serviceAccountName: otel-cluster-collector
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.119.0
          imagePullPolicy: IfNotPresent
          args:
            - --config=/conf/otel-collector-config.yaml
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /conf
      volumes:
        - name: config
          configMap:
            name: otel-cluster-collector-config
